maint: Remove 'po' files.
* po/{de,eo,es,fi,fr,gl,hu,id,it,lv,nl,pl,ro,ru,rw,sr,sv,tr}.po,
po/{vi,zh_TW,zh_cn}.po, po/jwhois.pot: Remove files from the repository
since running 'bootstrap' fetches them from the Translation Project.
* .gitignore: Adapt to it.

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,14 @@
 /lib/
 /m4/
 /po/*.gmo
+/po/*.po
 /po/.gitignore
 /po/.reference/
 /po/LINGUAS
 /po/Makevars
 /po/POTFILES
+/po/jwhois.pot
+/po/remove-potcdate.sed
 /po/stamp-po
 /src/jwhois
 /stamp-h1
