build: Move config.h to the src directory.
* configure.ac (AM_CONFIG_HEADER): Rename obsolete macro to ...
(AC_CONFIG_HEADER): ... this.  Set it to src/config.h instead of
config.h.
* .gitignore: Adapt to it.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,6 @@
 /autoscan.log
 /build-aux
 /config.cache
-/config.h
-/config.h.in
 /config.log
 /config.status
 /configure
@@ -30,8 +28,10 @@
 /po/jwhois.pot
 /po/remove-potcdate.sed
 /po/stamp-po
+/src/config.h
+/src/config.h.in
 /src/jwhois
-/stamp-h1
+/src/stamp-h1
 Makefile
 Makefile.in
 TAGS
