maint: Import modules from Gnulib.
* bootstrap.conf (gnulib_modules): Add getopt-gnu, regex and strcase.
* include/{getopt,regex}.h, src/{getopt,getopt1,regex,string}.c: Delete
redundant files which are now provided as Gnulib modules.
* src/Makefile.am (jwhois_SOURCES): Adapt to them.
* po/POTFILES.in: Likewise.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -20,7 +20,10 @@ gnulib_name=libgnu
 
 # gnulib modules used by this package.
 gnulib_modules="
+  getopt-gnu
+  regex
   snprintf
+  strcase
 "
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
