build: Use a non-recursive Makefile.
* doc/Makefile.am, doc/sv/Makefile.am, example/Makefile.am,
src/Makefile.am: Delete files.  Move rules and variables to ...
* Makefile.am: ... here.
* configure.ac (AC_CONFIG_FILES): Adapt to it.
(AM_INIT_AUTOMAKE): Add subdir-objects option.
* .gitignore: Adapt to it.

--- a/.gitignore
+++ b/.gitignore
@@ -28,10 +28,11 @@
 /po/jwhois.pot
 /po/remove-potcdate.sed
 /po/stamp-po
+/src/.dirstamp
 /src/config.h
 /src/config.h.in
-/src/jwhois
 /src/stamp-h1
 Makefile
 Makefile.in
 TAGS
+jwhois
