--- a/Makefile.am
+++ b/Makefile.am
@@ -20,13 +20,56 @@
 
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS = doc example lib po src
+SUBDIRS = lib po
+
+bin_PROGRAMS = jwhois
+
+jwhois_SOURCES = \
+  src/cache.c \
+  src/dns.c \
+  src/gai_strerror.c \
+  src/http.c \
+  src/init.c \
+  src/jconfig.c \
+  src/jwhois.c \
+  src/lookup.c \
+  src/rwhois.c \
+  src/utils.c \
+  src/whois.c
+
+jwhois_CFLAGS = $(OLDCFLAGS) -DSYSCONFDIR="\"$(sysconfdir)\"" \
+         -DLOCALSTATEDIR="\"$(localstatedir)\"" \
+         -DLOCALEDIR="\"$(localedir)\""
+
+jwhois_LDADD = @LIBINTL@ @LIBICONV@ @LIBS@ lib/libgnu.a
+
+AM_CPPFLAGS = \
+  -I$(top_srcdir)/include \
+  -I$(top_srcdir)/lib \
+  -I$(top_builddir)/lib
+
+AM_CFLAGS = $(jwhois_CFLAGS)
+
+info_TEXINFOS = doc/jwhois.texi
+man1dir = $(mandir)/sv/man1
+man_MANS = doc/jwhois.1 doc/sv/jwhois.1
 
 EXTRA_DIST = \
   example/jwhois.conf \
   include/*.h \
   jwhois.spec.in \
   jwhois.spec \
-  m4/gnulib-cache.m4
+  m4/gnulib-cache.m4 \
+  $(man_MANS)
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib
+install-data-local:
+	$(mkinstalldirs) $(DESTDIR)$(sysconfdir)
+	@if test ! -f $(DESTDIR)$(sysconfdir)/jwhois.conf; then \
+		echo "$(INSTALL_DATA) $(top_srcdir)/example/jwhois.conf $(DESTDIR)$(sysconfdir)/jwhois.conf"; \
+		$(INSTALL_DATA) $(top_srcdir)/example/jwhois.conf $(DESTDIR)$(sysconfdir)/jwhois.conf; \
+	else \
+		echo "## ";\
+		echo "## Not installing jwhois.conf because you already have a previous version";\
+		echo "## installed. You should manually take care of updating your jwhois.conf.";\
+		echo "##";\
+	fi
