doc: Update license to GNU FDL version 1.3.
* bootstrap.conf (gnulib_modules): Add 'fdl-1.3'.
* Makefile.am (doc_jwhois_TEXINFOS): New variable.
* doc/jwhois.texi: Adapt license notice.  Include a copy of the license.
* .gitignore: Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,6 +51,7 @@ AM_CPPFLAGS = \
 AM_CFLAGS = $(jwhois_CFLAGS)
 
 info_TEXINFOS = doc/jwhois.texi
+doc_jwhois_TEXINFOS = doc/fdl-1.3.texi
 dist_man_MANS = doc/jwhois.1
 
 # Avoid re-generating the man pages when building from tarballs.
