--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.[oa]
 *.~
 */.deps/
+.dirstamp
 /ABOUT-NLS
 /INSTALL
 /aclocal.m4
@@ -12,8 +13,12 @@
 /config.status
 /configure
 /configure.scan
+/doc/.gitignore
+/doc/fdl-1.3.texi
 /doc/jwhois.1
 /doc/jwhois.info
+/doc/stamp-vti
+/doc/version.texi
 /jwhois-*.tar.gz
 /jwhois-*.tar.gz.sig
 /jwhois.spec
@@ -29,7 +34,6 @@
 /po/jwhois.pot
 /po/remove-potcdate.sed
 /po/stamp-po
-/src/.dirstamp
 /src/config.h
 /src/config.h.in
 /src/stamp-h1
