build: Delete unneeded src/gai_strerror.c file.
* src/gai_strerror.c: Delete file.  This code is already provided by the
Gnulib module 'getaddrinfo'.
* configure.ac: Don't check for it.
* Makefile.am (jwhois_SOURCES): Adapt to it.
* po/POTFILES.in: Likewise.
* include/gai_strerror.h: Delete unneeded header file.
* src/dns.c: Don't include it.

--- a/configure.ac
+++ b/configure.ac
@@ -109,8 +109,7 @@ AC_CHECK_FUNC(socket,,
   AC_CHECK_LIB(inet, socket))
 AC_CHECK_FUNCS(getipnodebyname)
 AC_CHECK_FUNC(getaddrinfo,
-  [AC_DEFINE(HAVE_GETADDRINFO,1)
-   AC_CHECK_FUNCS(gai_strerror)],
+  [AC_DEFINE(HAVE_GETADDRINFO,1)],
   [AC_CHECK_FUNC(gethostbyname,,
      AC_CHECK_LIB(nsl, gethostbyname))
    AC_CHECK_FUNC(inet_aton)])
