--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -20,9 +20,11 @@ gnulib_name=libgnu
 
 # gnulib modules used by this package.
 gnulib_modules="
+  argp
+  argp-version-etc
+  version-etc-fsf
   fdl-1.3
   getaddrinfo
-  getopt-gnu
   gettext
   regex
   snprintf
