maint: Move header files to src directory.
* include/cache.h: Move to src directory.
* include/http.h: Likewise.
* include/init.h: Likewise.
* include/jconfig.h: Likewise.
* include/jwhois.h: Likewise.
* include/lookup.h: Likewise.
* include/rwhois.h: Likewise.
* include/utils.h: Likewise.
* include/whois.h: Likewise.
* src/cache.h: New file.
* src/http.h: Likewise.
* src/init.h: Likewise.
* src/jconfig.h: Likewise.
* src/jwhois.h: Likewise.
* src/lookup.h: Likewise.
* src/rwhois.h: Likewise.
* src/utils.h: Likewise.
* src/whois.h: Likewise.
* Makefile.am (EXTRA_DIST): Move header files to ...
(jwhois_SOURCES): ... here.  Don't use globbing which is not well
supported by Automake.
(AM_CPPFLAGS): Adapt the list of directories to be
searched for header files.

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,14 +26,23 @@ bin_PROGRAMS = jwhois
 
 jwhois_SOURCES = \
   src/cache.c \
+  src/cache.h \
   src/http.c \
+  src/http.h \
   src/init.c \
+  src/init.h \
   src/jconfig.c \
+  src/jconfig.h \
   src/jwhois.c \
+  src/jwhois.h \
   src/lookup.c \
+  src/lookup.h \
   src/rwhois.c \
+  src/rwhois.h \
   src/utils.c \
-  src/whois.c
+  src/utils.h \
+  src/whois.c \
+  src/whois.h
 
 jwhois_CFLAGS = $(OLDCFLAGS) -DSYSCONFDIR="\"$(sysconfdir)\"" \
          -DLOCALSTATEDIR="\"$(localstatedir)\"" \
@@ -42,7 +51,7 @@ jwhois_CFLAGS = $(OLDCFLAGS) -DSYSCONFDIR="\"$(sysconfdir)\"" \
 jwhois_LDADD = @LIBINTL@ @LIBICONV@ @LIBS@ lib/libgnu.a
 
 AM_CPPFLAGS = \
-  -I$(top_srcdir)/include \
+  -I$(top_srcdir)/src \
   -I$(top_srcdir)/lib \
   -I$(top_builddir)/lib
 
@@ -61,7 +70,6 @@ endif
 
 EXTRA_DIST = \
   example/jwhois.conf \
-  include/*.h \
   jwhois.spec.in \
   jwhois.spec \
   m4/gnulib-cache.m4
