--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -22,13 +22,14 @@ gnulib_name=libgnu
 gnulib_modules="
   argp
   argp-version-etc
-  version-etc-fsf
   fdl-1.3
   getaddrinfo
   gettext
+  gitlog-to-changelog
   regex
   snprintf
   strcase
+  version-etc-fsf
 "
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
@@ -76,3 +77,9 @@ automake   1.9.6
 git        1.5.5
 tar        -
 "
+
+bootstrap_post_import_hook ()
+{
+  # Automake requires that ChangeLog exist.
+  touch ChangeLog || return 1
+}
