--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -28,6 +28,7 @@ gnulib_modules="
   gettext
   git-version-gen
   gitlog-to-changelog
+  readme-release
   regex
   snprintf
   strcase
@@ -84,4 +85,10 @@ bootstrap_post_import_hook ()
 {
   # Automake requires that ChangeLog exist.
   touch ChangeLog || return 1
+}
+
+bootstrap_epilogue ()
+{
+  # Adapt package name in release process instructions.
+  perl -pi -e "s/\@PACKAGE\@/$package/g" README-release
 }
