--- a/configure.ac
+++ b/configure.ac
@@ -1,22 +1,21 @@
 dnl Process this file with autoconf to produce a configure script.
-##
-## This file is part of jwhois
-## Copyright (C) 1999-2005, 2015, 2016  Free Software Foundation, Inc.
-##
-## This program is free software; you can redistribute it and/or modify
-## it under the terms of the GNU General Public License as published by
-## the Free Software Foundation; either version 2 of the License, or
-## (at your option) any later version.
-##
-## This program is distributed in the hope that it will be useful,
-## but WITHOUT ANY WARRANTY; without even the implied warranty of
-## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-## GNU General Public License for more details.
-##
-## You should have received a copy of the GNU General Public License
-## along with this program; if not, write to the Free Software
-## Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
-##
+# Copyright (C) 1999-2005, 2015, 2016  Free Software Foundation, Inc.
+#
+# This file is part of GNU JWhois.
+#
+# GNU JWhois is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# GNU JWhois is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with GNU JWhois.  If not, see <http://www.gnu.org/licenses/>.
+
 AC_INIT([GNU JWhois],
         m4_esyscmd([build-aux/git-version-gen .tarball-version]),
         [bug-jwhois@gnu.org])
