all: Prohibit magic numbers in exit status.
* configure.ac: Use 'EXIT_SUCCESS' and 'EXIT_FAILURE' macros.
* src/http.c (http_query): Likewise.
* src/init.c (parse_args): Likewise.
* src/jconfig.c (jconfig_safe_strcat, jconfig_get_quoted)
(jconfig_get_unquoted, jconfig_parse_file): Likewise.
* src/jwhois.c (main, jwhois_query): Likewise.
* src/lookup.c (add_string, lookup_query_format): Likewise.
* src/rwhois.c (rwhois_read_line): Likewise.
* src/utils.c (add_text_to_buffer): Likewise.
* src/whois.c (whois_query): Likewise.

--- a/configure.ac
+++ b/configure.ac
@@ -102,6 +102,7 @@ if test "$ac_cv_func_inet_pton" = "yes" ; then
 AC_MSG_CHECKING(if inet_pton supports IPv6)
 AC_TRY_RUN(
   [
+#include <stdlib.h>
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netinet/in.h>
@@ -109,9 +110,9 @@ int main()
   {
     struct in6_addr addr6;
     if (inet_pton(AF_INET6, "::1", &addr6) < 1)
-      exit(1);
+      exit (EXIT_FAILURE);
     else
-      exit(0);
+      exit (EXIT_SUCCESS);
   }
   ], [
        AC_MSG_RESULT(yes)
