build: Import 'test-framework-sh' module from Gnulib.
* bootstrap.conf (gnulib_modules): Add 'test-framework-sh'.
* tests/config.sh: New test.
* Makefile.am (TEST_EXTENSIONS, SH_LOG_COMPILER, AM_TESTS_ENVIRONMENT)
(TESTS): New variables.
(EXTRA_DIST): Add 'TESTS' and 'tests/init.sh'.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *.[oa]
+*.log
+*.trs
 *.~
 */.deps/
 .dirstamp
@@ -42,6 +44,7 @@
 /src/config.h
 /src/config.h.in
 /src/stamp-h1
+/tests/.gitignore
 Makefile
 Makefile.in
 TAGS
