build: Add code coverage.
* m4/ax_code_coverage.m4: New file from Autoconf Archive.  Upgrade
license to LGPLv3+.
* configure.ac: Use AX_CODE_COVERAGE.
* Makefile.am: Include @CODE_COVERAGE_RULES@.
(CODE_COVERAGE_BRANCH_COVERAGE, CODE_COVERAGE_DIRECTORY): New variables.
(AM_CPPFLAGS): Add $(CODE_COVERAGE_CPPFLAGS).
(AM_CFLAGS): Add $(CODE_COVERAGE_CFLAGS).
(LDADD): Add $(CODE_COVERAGE_LIBS).
* cfg.mk (local-checks-to-skip): Add 'sc_makefile_at_at_check'.
* .gitignore: Update.

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,11 +26,12 @@ noinst_LIBRARIES = libjwhois.a
 AM_CPPFLAGS = \
   -I$(top_srcdir)/src \
   -I$(top_srcdir)/lib \
-  -I$(top_builddir)/lib
+  -I$(top_builddir)/lib \
+  $(CODE_COVERAGE_CPPFLAGS)
 
-AM_CFLAGS = $(WARN_CFLAGS)
+AM_CFLAGS = $(WARN_CFLAGS) $(CODE_COVERAGE_CFLAGS)
 
-LDADD = libjwhois.a lib/libgnu.a
+LDADD = libjwhois.a lib/libgnu.a $(CODE_COVERAGE_LIBS)
 
 jwhois_CFLAGS = $(AM_CFLAGS) $(WERROR_CFLAGS)
 jwhois_LDADD = $(LDADD) $(LIBINTL) $(LIBICONV) $(LIBS)
@@ -82,6 +83,10 @@ TESTS = \
 
 check_PROGRAMS = \
   tests/utils_strjoinv
+
+@CODE_COVERAGE_RULES@
+CODE_COVERAGE_BRANCH_COVERAGE = 1
+CODE_COVERAGE_DIRECTORY = src
 
 noinst_HEADERS = tests/macros.h
 
