--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 *.[oa]
+*.gcda
+*.gcno
+*.gcov
 *.log
 *.trs
 *.~
@@ -29,7 +32,8 @@
 /jwhois-*.tar.gz.sig
 /jwhois.spec
 /lib/
-/m4/
+/m4/.gitignore
+/m4/gnulib-cache.m4
 /maint.mk
 /po/*.gmo
 /po/*.po
@@ -46,6 +50,7 @@
 /src/stamp-h1
 /tests/.gitignore
 /tests/utils_strjoinv
+/GNU JWhois-*
 Makefile
 Makefile.in
 TAGS
