build: Import 'xalloc-die' module from Gnulib.
* bootstrap.conf (gnulib_modules): Add 'xalloc-die'.
* po/POTFILES.in: Add 'lib/error.c' and 'lib/xalloc-die.c'.
* src/jwhois.h: Include "xalloc.h".
* src/cache.c (cache_init): Use 'xstrdup'.
* src/init.c (parse_args): Likewise.
* src/jconfig.c (jconfig_safe_strcat): Use 'xrealloc'.
(jconfig_get_quoted, jconfig_get_unquoted, jconfig_parse_file): Use
'xmalloc'.
* src/jwhois.c (main): Likewise.
(jwhois_query): Use 'xrealloc'.
* src/lookup.c (lookup_host): Use 'xstrdup'.
(find_cidr6, lookup_query_format): Use 'xstrdup' and 'xmalloc'.
(lookup_whois_servers): Use 'xmalloc'.
(add_string): Use 'xrealloc'.
* src/rwhois.c (rwhois_insert_referral, rwhois_query): Use 'xmalloc'.
* src/utils.c (strjoinv): Likewise.
(add_text_to_buffer): Use 'xmalloc' and 'xrealloc'.
* src/whois.c (whois_read, whois_query): Use 'xmalloc'.
(wq_free): Use 'xstrdup'.

--- a/bootstrap.conf
+++ b/bootstrap.conf
@@ -36,6 +36,7 @@ gnulib_modules="
   strcase
   test-framework-sh
   version-etc-fsf
+  xalloc-die
 "
 
 # Additional xgettext options to use.  Use "\\\newline" to break lines.
