utils: Add 'dump_arguments' function.
* src/utils.h (dump_arguments): New function.
* src/utils.c (dump_arguments): Implement it.
* src/init.c (parse_args): Use it.
* tests/utils_dump_arguments.c: New test.
* Makefile.am (check_PROGRAMS): Add it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -82,6 +82,7 @@ TESTS = \
   $(check_PROGRAMS)
 
 check_PROGRAMS = \
+  tests/utils_dump_arguments \
   tests/utils_strjoinv
 
 @CODE_COVERAGE_RULES@
