system: Rename 'jwhois.h' to 'system.h'.
* src/jwhois.h: Rename to ...
* src/system.h: ... this.  Include most used headers.
* src/cache.c: Adapt headers inclusion.
* src/http.c: Likewise.
* src/http.h: Likewise.
* src/init.c: Likewise.
* src/jwhois.c: Likewise.
* src/lookup.c: Likewise.
* src/lookup.h: Likewise.
* src/rwhois.c: Likewise.
* src/utils.c: Likewise.
* src/whois.c: Likewise.
* Makefile.am (jwhois_SOURCES): Remove 'src/jwhois.h'.
(libjwhois_a_SOURCES): Add 'src/system.h'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -35,9 +35,7 @@ LDADD = libjwhois.a lib/libgnu.a $(CODE_COVERAGE_LIBS)
 
 jwhois_CFLAGS = $(AM_CFLAGS) $(WERROR_CFLAGS)
 jwhois_LDADD = $(LDADD) $(LIBINTL) $(LIBICONV) $(LIBS)
-jwhois_SOURCES = \
-  src/jwhois.c \
-  src/jwhois.h
+jwhois_SOURCES = src/jwhois.c
 
 libjwhois_a_CFLAGS = $(AM_CFLAGS) $(WERROR_CFLAGS)
 libjwhois_a_SOURCES = \
@@ -53,6 +51,7 @@ libjwhois_a_SOURCES = \
   src/lookup.h \
   src/rwhois.c \
   src/rwhois.h \
+  src/system.h \
   src/utils.c \
   src/utils.h \
   src/whois.c \
