maint: Add '.prev-version' file.
* .prev-version: New file.
* Makefile.am (EXTRA_DIST): Distribute it.
* cfg.mk (old_NEWS_hash): Adapt to it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -91,6 +91,7 @@ CODE_COVERAGE_DIRECTORY = src
 noinst_HEADERS = tests/macros.h
 
 EXTRA_DIST = \
+  .prev-version \
   .version \
   ChangeLog.old \
   example/jwhois.conf \
